# rssv3

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  sources.yaml (exemple)
.github/workflows/: api.yml  cron.yml
rssgen/: __init__.py  api.py  cli.py  extractor.py  feed_builder.py  utils.py
tools/: add_source.py
